Implement dynamic OpenAI integration with disambiguated song input, display accurate sample previews and recommendation metadata
- Inject full song title and filename into OpenAI prompt to improve result accuracy
- Updated UI to maintain 'Find Similar' button and preview layout post-upload
- Added fallback artwork handling to prevent missing images
- Integrated iTunes preview audio and cover art per recommendation
- Improved debugging output in console for GPT and iTunes responses

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,9 @@
       <h2>Upload a Song</h2>
       <div class="upload-box">
         <p>Drag & Drop your song here</p>
-        <input type="file" id="fileInput" />
+        <!-- ✅ Restrict to audio formats -->
+        <input type="file" id="fileInput" accept=".mp3,.wav,.m4a" />
+        <div id="previewArea">/</div>
         <button id="playBtn">▶️ Play Sample</button>
         <button id="analyzeBtn">🔍 Find Similar</button>
       </div>
@@ -55,5 +57,7 @@
     <p>Resona &copy; 2025</p>
   </footer>
 
+  <!-- ✅ JavaScript Entry (module) -->
+  <script type="module" src="app.js"></script>
 </body>
 </html>
